--- a/FrontEnd/user_settings.html
+++ b/FrontEnd/user_settings.html
@@ -189,6 +189,69 @@
             box-shadow: none;
         }
 
+        .profile-wrapper {
+            position: relative;
+            display: inline-block;
+        }
+
+        .profile-menu {
+            position: absolute;
+            top: 38px;
+            right: 0;
+            background: var(--panel-bg);
+            border: 1px solid var(--border);
+            box-shadow: 0 10px 25px rgba(15,23,42,0.35);
+            border-radius: 10px;
+            min-width: 200px;
+            padding: 10px 0;
+            display: none;
+            z-index: 999;
+        }
+
+        .profile-menu__meta {
+            padding: 0 16px 10px;
+            border-bottom: 1px solid rgba(148,163,184,0.2);
+            margin-bottom: 6px;
+        }
+
+        .profile-menu__meta strong {
+            display: block;
+            font-size: 14px;
+            color: var(--text);
+        }
+
+        .profile-menu__meta span {
+            display: block;
+            font-size: 12px;
+            color: var(--muted);
+        }
+
+        .profile-menu a,
+        .profile-menu button {
+            width: 100%;
+            background: none;
+            border: none;
+            text-align: left;
+            padding: 10px 16px;
+            font-size: 13px;
+            color: var(--text);
+            cursor: pointer;
+        }
+
+        .profile-menu a:hover,
+        .profile-menu button:hover {
+            background: rgba(255,255,255,0.08);
+        }
+
+        html[data-theme="light"] .profile-menu {
+            box-shadow: 0 8px 18px rgba(15,23,42,0.15);
+        }
+
+        html[data-theme="light"] .profile-menu a:hover,
+        html[data-theme="light"] .profile-menu button:hover {
+            background: rgba(15,23,42,0.08);
+        }
+
         /* Settings panel */
         .workspace {
             margin-top: 20px;
@@ -216,10 +279,14 @@
         }
 
         .settings-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-            gap: 14px 22px;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
             margin-top: 8px;
+            width: 100%;
+            max-width: 520px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         label {
@@ -242,6 +309,11 @@
             outline: none;
         }
 
+        input[readonly] {
+            opacity: 0.8;
+            cursor: not-allowed;
+        }
+
         input:focus,
         select:focus {
             border-color: #818cf8;
@@ -251,7 +323,24 @@
         .save-row {
             margin-top: 20px;
             display: flex;
-            justify-content: flex-end;
+            flex-direction: column;
+            gap: 10px;
+            align-items: flex-end;
+        }
+
+        .form-status {
+            font-size: 13px;
+            color: var(--muted);
+        }
+
+        .form-status.error {
+            color: #f87171;
+        }
+
+        .field-note {
+            font-size: 12px;
+            color: var(--muted);
+            margin-top: 4px;
         }
 
         .btn-primary {
@@ -326,7 +415,17 @@
 
             <div class="top-actions">
                 <button id="theme-toggle" class="icon-btn" title="Toggle theme">☀️</button>
-                <button class="icon-btn" title="Profile">🧑‍💻</button>
+                <div class="profile-wrapper">
+                    <button id="profile-btn" class="icon-btn" title="Profile">👤</button>
+                    <div id="profile-menu" class="profile-menu">
+                        <div class="profile-menu__meta">
+                            <strong data-profile-username>—</strong>
+                            <span data-profile-email>—</span>
+                        </div>
+                        <a href="user_settings.html">Settings</a>
+                        <button type="button" data-logout>Logout</button>
+                    </div>
+                </div>
                 <button class="icon-btn" title="Refresh">⟲</button>
             </div>
         </header>
@@ -346,7 +445,7 @@
 
                     <div>
                         <label for="email">Email</label>
-                        <input id="email" type="email" placeholder="you@example.com">
+                        <input id="email" type="email" placeholder="you@example.com" readonly>
                     </div>
 
                     <div>
@@ -362,25 +461,15 @@
                     </div>
 
                     <div>
-                        <label for="detail">Default explanation style</label>
-                        <select id="detail">
-                            <option>Short &amp; simple</option>
-                            <option>Balanced</option>
-                            <option>Step-by-step</option>
-                        </select>
-                    </div>
-
-                    <div>
-                        <label for="theme-select">Theme</label>
-                        <select id="theme-select">
-                            <option>Light</option>
-                            <option>Dark</option>
-                        </select>
+                        <label for="new-password">Change password</label>
+                        <input id="new-password" type="password" placeholder="New password (optional)">
+                        <p class="field-note">Leave blank to keep your current password.</p>
                     </div>
                 </div>
 
                 <div class="save-row">
-                    <button class="btn-primary" type="button">
+                    <p id="settings-status" class="form-status" role="status"></p>
+                    <button class="btn-primary" id="save-settings-btn" type="button">
                         <span>💾</span>
                         <span>Save settings</span>
                     </button>
